plugins {
    id 'java'
}

group = 'com.Lino.battlePass.BattlePass'
version = 'v7.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven {
        name = "papermc"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
    maven {
        url = uri("https://repo.extendedclip.com/content/repositories/placeholderapi/")
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.11.6'
}

tasks.jar {
    archiveBaseName.set("BattlePass")
}
